2016-03-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2907: Replace --with-abs-install-dir
	with usual --prefix
	* NEWS: Updated.

2014-06-04  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2907: Replace --with-abs-install-dir
	with usual --prefix
	* INSTALL: Replace documentation of
	--with-abs-install-dir with --prefix. Fix typo.
	* Makefile.am:
	(ICEDTEA_ENV): Set INSTALL_LOCATION to prefix.
	* configure.ac: Drop abs-install-dir
	option and use prefix in ABS_CLIENT_LIBJVM_SO and
	ABS_SERVER_LIBJVM_SO instead.
	* tapset/hotspot.stp.in,
	* tapset/hotspot_jni.stp.in,
	* tapset/jstack.stp.in:
	Replace ABS_JAVA_HOME_DIR with prefix.

2016-03-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2906: Support prefixed variants of GNU
	tools used on *BSD systems
	* NEWS: Updated.

2014-04-14  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2906: Support prefixed variants of GNU
	tools used on *BSD systems
	* AUTHORS: Add Radim Kolar.
	* acinclude.m4:
	(IT_FIND_TOOL): Cleanup error message.
	(IT_FIND_TOOLS): Likewise.

2014-03-20  Radim Kolar  <hsn@sanatana.filez.com>

	PR2906: Support prefixed variants of GNU
	tools used on *BSD systems
	* Makefile.am:
	(versioning): Use $(SED) instead of 'sed'.
	(icedtea): Likewise.
	(icedtea-debug): Likewise.
	(clean-add-jamvm): Likewise.
	(clean-add-jamvm-debug): Likewise.
	(clean-add-cacao): Likewise.
	(clean-add-cacao-debug): Likewise.
	(clean-add-zero): Likewise.
	(clean-add-zero-debug): Likewise.
	(jtreg_processes): Likewise.
	* acinclude.m4:
	(IT_FIND_TOOLS): New macro to check for
	multiple tools.
	* configure.ac: Check for gmake, gfind, gpatch, gtar,
	gsha256sum and gsed (GNU tools on *BSD). Use
	IT_FIND_TOOLS for fastjar.

2016-03-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2832, CA195: typeinfo.cpp: typeinfo_merge_nonarrays:
	Assertion `dest && result && x.any && y.any' failed
	* Makefile.am:
	(ICEDTEA_PATCHES): Add new patch.
	* NEWS: Updated.